# crypto-challenges

./: .gitignore  crypto-challenges.cabal
benchmarks/: Benchmarks.hs
src/: Inputs.hs  Lib.hs
test/: Spec.hs
