name:                crypto-challenges
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/crypto-challenges#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       base16-bytestring,
                       base64-bytestring,
                       word8,
                       bytestring
  default-language:    Haskell2010

benchmark crypto-benchmarks
  build-depends:       base,
                       crypto-challenges,
                       criterion
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

  hs-source-dirs:      benchmarks
  main-is:             Benchmarks.hs
  type:                exitcode-stdio-1.0

test-suite crypto-challenges-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crypto-challenges
                     , bytestring
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crypto-challenges
